--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "prop-types": "^15.6.2",
     "raf": "3.4.0",
     "react": "^16.4.2",
+    "react-beforeunload": "^1.1.1",
     "react-dev-utils": "^5.0.2",
     "react-dom": "^16.4.2",
     "react-redux": "^5.0.7",
